Fix charts overflowing thier containers

--- a/src/components/season-chart/season-chart.component.scss
+++ b/src/components/season-chart/season-chart.component.scss
@@ -1,8 +1,5 @@
-div{
-    width: 100%;
-}
-
 canvas{
+    max-width: 95%;
     width: 95%;
     margin: 0 auto;
 }
